Floating sidebar on IE8. Appears to fix the big IE8 issue

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,9 @@ dl dd {
     margin: 0 2% 0 0;
     padding: 0;
 }
+#IE8 .sidebar-page {
+    float: left;
+}
 #IE6 .not-header {
     margin-top: 55px;
 }
@@ -112,31 +115,31 @@ dl dd {
         margin-left: 18px;
     }
     .sidebar-page > ul {
-      padding-left: 0;
-      margin-bottom: 20px;
+        padding-left: 0;
+        margin-bottom: 20px;
     }
     .sidebar-page > ul li {
         list-style: none;
     }
     .sidebar-page > ul .li {
-      position: relative;
-      display: block;
-      padding: 10px 15px;
-      margin-bottom: -1px;
-      background-color: #ffffff;
-      border: 1px solid #dddddd;
+        position: relative;
+        display: block;
+        padding: 10px 15px;
+        margin-bottom: -1px;
+        background-color: #ffffff;
+        border: 1px solid #dddddd;
     }
     .sidebar-page > ul li:first-child .li {
-      border-top-right-radius: 4px;
-      border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+        border-top-left-radius: 4px;
     }
     .sidebar-page > ul li:last-child .li {
-      margin-bottom: 0;
-      border-bottom-right-radius: 4px;
-      border-bottom-left-radius: 4px;
+        margin-bottom: 0;
+        border-bottom-right-radius: 4px;
+        border-bottom-left-radius: 4px;
     }
     .sidebar-page > ul .li > .badge {
-      float: right;
+        float: right;
     }
 
 /* general button class */
